--- a/portfolio/src/pages/skills/Skill.css
+++ b/portfolio/src/pages/skills/Skill.css
@@ -1,5 +1,5 @@
-Import Poppins font
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+/* Import Poppins font
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"); */
 
 body, html {
   margin: 0;
