--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,12 +1,29 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: "Poppins", sans-serif;
+  background-color: #0d1117; /* main background */
+  color: #ffffff;
+}
+
 .page {
-  padding: 120px 50px 50px; /* top padding because navbar is fixed */
-  color: white;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  box-sizing: border-box;
 }
 
 .page-title {
   font-size: 2.5rem;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
   animation: fadeInUp 1s ease-in-out;
 }
 
