--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -4,7 +4,7 @@ body, html {
   width: 100%;
   height: 100%;
   font-family: "Poppins", sans-serif;
-  background-color: #0d1117; /* main background */
+  background-color: rgb(13, 17, 23); /* main background */
   color: #ffffff;
 }
 
