--- a/portfolio/src/components/Footer.css
+++ b/portfolio/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background: #000000;        /* dark background */
+  background: rgb(13, 17, 23);;        /* dark background */
   color: white;
   padding: 0.7rem 0.5rem;         /* bigger padding so it looks like a footer */
   border-radius: 0;           /* no rounded edges for full-width footer */
