--- a/portfolio/src/pages/Home.css
+++ b/portfolio/src/pages/Home.css
@@ -80,10 +80,11 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 40px 20px;
+  padding: 20px 20px;
   background: #121212;
   color: #fff;
   font-family: "Poppins", sans-serif;
+  padding-top: 72px;
 }
 
 .contact-container h2 {
